--- a/frontend/src/components/description/description.css
+++ b/frontend/src/components/description/description.css
@@ -1,8 +1,8 @@
 .description {
     text-align: center;
     background-color: #d8c8bc;
-    padding: 50px;
-    font-family: 'Lato', 'Montserrat', sans-serif;
-    font-size: 20px;
-    margin: 5px;
+    padding: 5px;
+    font-family: Lato, Montserrat, sans-serif;
+    font-size: 15px;
+    margin-bottom: 20px;
 }
