--- a/frontend/src/components/clock/clock.css
+++ b/frontend/src/components/clock/clock.css
@@ -1,14 +1,15 @@
 .clock {
-    width: 300px;
-    height: 70px;
+    width: 180px;
+    height: 50px;
+    text-align: center;
     font-size: 30px;
     color: #462904;
     background-color: #d8c8bc;
     border: 2px solid #744b05;
-    border-radius: 30px;
+    border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    margin-top: 100px;
+    padding: 20px;
+    margin-top: 70px;
     margin-left: auto;
     margin-right: auto;
     font-family: Lato, Montserrat, sans-serif;
