--- a/frontend/src/components/description/description.css
+++ b/frontend/src/components/description/description.css
@@ -6,3 +6,29 @@
     font-size: 15px;
     margin-bottom: 20px;
 }
+/* Десктопный режим */
+@media (min-width: 1255px) {
+    .description {
+        padding: 15px;
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+}
+
+/* Планшетный режим */
+@media (min-width: 814px) and (max-width: 1254px) {
+    .description {
+        padding: 15px;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+}
+
+/* Мобильный режим */
+@media (max-width: 814px) {
+    .description {
+        padding: 10px;
+        font-size: 15px;
+        margin-bottom: 25px;
+    }
+}
