--- a/frontend/src/components/mainPage/mainPage.css
+++ b/frontend/src/components/mainPage/mainPage.css
@@ -2,18 +2,17 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border: 2px solid #744b05;
     text-align: center;
-    float: left;
     width: 45%;
     min-width: 400px;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
     background-color: #886750;
     padding: 5px;
     border-radius: 10px;
+    margin: 20px 20px 10px;
+
 }/* Десктопный режим */
 @media (min-width: 1255px) {
     .window {
+        float: left;
         width: 45%;
         min-width: 400px;
         margin-top: 20px;
@@ -25,22 +24,17 @@
 /* Планшетный режим */
 @media (min-width: 814px) and (max-width: 1254px) {
     .window {
-        width: 90%;
+        width: 95%;
+        height: 46%;
         min-width: 400px;
-        margin-top: 10px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 5px auto 10px;
     }
 }
-
 /* Мобильный режим */
 @media (max-width: 814px) {
     .window {
-        width: 90%;
-        min-width: 400px;
-        margin-top: 5px;
-        margin-left: auto;
-        margin-right: auto;
-
+        width: 98%;
+        min-width: 390px;
+        margin: 5px auto 10px;
     }
 }
